--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "googleapis": "^158.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
