--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.14",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.85.5",
+    "@types/uuid": "^10.0.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.5",
     "googleapis": "^158.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -24,7 +28,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "shadcn-ui": "^0.9.5",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
