--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "googleapis": "^158.0.0",
