--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.14",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -30,6 +31,7 @@
     "react-dom": "19.1.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
