--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-highlight-within-textarea": "^3.2.2",
     "react-hook-form": "^7.62.0",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.7",
