--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,10 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.85.5",
+    "@tiptap/extension-mention": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
+    "@tiptap/suggestion": "^3.11.0",
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +46,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tippy.js": "^6.3.7",
     "uuid": "^11.1.0",
     "zod": "^4.1.8"
   },
