--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@libsql/client": "^0.15.14",
     "@mui/icons-material": "^7.3.5",
