--- a/app/vercel.json
+++ b/app/vercel.json
@@ -2,5 +2,11 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "outputDirectory": ".next",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "crons": [
+    {
+      "path": "/api/scheduler/daily",
+      "schedule": "0 23 * * *"
+    }
+  ]
 }
