feat(cron): implement daily cron endpoint to list upcoming tasks and send Slack notifications

--- a/app/vercel.json
+++ b/app/vercel.json
@@ -5,7 +5,7 @@
   "framework": "nextjs",
   "crons": [
     {
-      "path": "/api/scheduler/daily",
+      "path": "/api/cron/daily",
       "schedule": "0 23 * * *"
     }
   ]
