--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@libsql/client": "^0.15.14",
     "@mui/icons-material": "^7.3.5",
+    "@mui/lab": "^7.0.1-beta.20",
     "@mui/material": "^7.3.5",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
