--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.87.1",
     "@tanstack/react-query": "^5.85.5",
     "@tiptap/extension-mention": "^3.11.0",
     "@tiptap/react": "^3.11.0",
@@ -38,16 +40,18 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.542.0",
-    "next": "15.5.7",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-highlight-within-textarea": "^3.2.2",
     "react-hook-form": "^7.62.0",
+    "react-intersection-observer": "^10.0.0",
+    "recharts": "^3.5.1",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
